# pam_tacplus

./: ChangeLog  Makefile.am  Pam.d.common-example  README.md  configure.ac  pam_tacplus.c  pam_tacplus.h  sample.pam  support.c  support.h  tacc.1  tacc.c  tacplus_servers  tacplus_servers.5
debian/: changelog  control  copyright  libpam-tacplus.install  libtac2.symbols  rules  tacplus
libtac/include/: cdefs.h  libtac.h  tacplus.h
libtac/lib/: acct_r.c  acct_s.c  attrib.c  authen_r.c  authen_s.c  author_r.c  author_s.c  connect.c  cont_s.c  crypt.c  hdr_check.c  header.c  magic.c  md5.c  md5.h  messages.c  messages.h  read_wait.c  version.c  xalloc.c  xalloc.h
